--- a/spark/spark-3.3.0/conf/spark-defaults.conf
+++ b/spark/spark-3.3.0/conf/spark-defaults.conf
@@ -21,10 +21,10 @@
 # Example:
 spark.master                      spark://sith4-fast:7077
 spark.eventLog.enabled            true
-spark.eventLog.dir /opt/kolokasis/tera_applications/spark/spark-3.3.0/logs
-spark.metrics.conf /opt/kolokasis/tera_applications/spark/spark-3.3.0/conf/metrics.properties
+spark.eventLog.dir /home/users/u7300623/tera_applications/spark/spark-3.3.0/logs
+spark.metrics.conf /home/users/u7300623/tera_applications/spark/spark-3.3.0/conf/metrics.properties
 spark.serializer                  org.apache.spark.serializer.KryoSerializer
-spark.executor.extraJavaOptions   -server -XX:-ClassUnloading -XX:+UseParallelGC -XX:-UseParallelOldGC -XX:ParallelGCThreads=16 -XX:+EnableTeraHeap -XX:TeraHeapSize=1230508130304 -Xms54g -XX:-UseCompressedOops -XX:-UseCompressedClassPointers -XX:+TeraHeapStatistics -Xlogth:teraHeap.txt -XX:TeraStripeSize=16 -XX:+ShowMessageBoxOnError
+spark.executor.extraJavaOptions -server -XX:-ClassUnloading -XX:+UseParallelGC -XX:ParallelGCThreads=8 -XX:+EnableTeraHeap -XX:TeraHeapSize=1271310319616 -Xms16g -XX:-UseCompressedOops -XX:-UseCompressedClassPointers -XX:+TeraHeapStatistics -Xlogth:teraHeap.txt -XX:TeraHeapPolicy="SparkPrimitivePolicy" -XX:TeraStripeSize=32768 -XX:+ShowMessageBoxOnError -XX:AllocateH2At="/mnt/ssd0/adnan/" -XX:H2FileSize=214748364800 
 
 spark.teraheap.enabled   true
 spark.teraheap.heap.size 1200g
@@ -33,8 +33,8 @@ spark.memory.storageFraction 0.9
 
 spark.driver.memory              10g
 
-spark.driver.extraJavaOptions    -server -XX:+UseParallelGC -XX:-UseParallelOldGC -XX:-EnableTeraCache -XX:-UseCompressedOops -XX:-UseCompressedClassPointers
+spark.driver.extraJavaOptions    -server -XX:+UseParallelGC -XX:-EnableTeraHeap -XX:-UseCompressedOops -XX:-UseCompressedClassPointers
 
 spark.network.timeout             10000s
 spark.executor.heartbeatInterval  999s
-spark.rpc.numRetries              4000
+spark.rpc.numRetries              8000
