updated number of max failures in config

--- a/spark/scripts/configs/native/spark-defaults.conf
+++ b/spark/scripts/configs/native/spark-defaults.conf
@@ -35,3 +35,5 @@ spark.driver.extraJavaOptions   -server -XX:+UseParallelGC -XX:-ResizeTLAB -XX:-
 spark.network.timeout             10000s
 spark.executor.heartbeatInterval  1000s
 spark.rpc.numRetries              4000
+
+spark.task.maxFailures 2
