--- a/spark/scripts/configs/teraheap/spark-defaults.conf
+++ b/spark/scripts/configs/teraheap/spark-defaults.conf
@@ -38,3 +38,5 @@ spark.driver.extraJavaOptions    -server -XX:+UseParallelGC -XX:-EnableTeraHeap 
 spark.network.timeout             10000s
 spark.executor.heartbeatInterval  999s
 spark.rpc.numRetries              8000
+
+spark.task.maxFailures 2
