--- a/spark/spark-3.3.0/conf/spark-defaults.conf
+++ b/spark/spark-3.3.0/conf/spark-defaults.conf
@@ -24,7 +24,7 @@ spark.eventLog.enabled            true
 spark.eventLog.dir /home/users/u7300623/tera_applications/spark/spark-3.3.0/logs
 spark.metrics.conf /home/users/u7300623/tera_applications/spark/spark-3.3.0/conf/metrics.properties
 spark.serializer                  org.apache.spark.serializer.KryoSerializer
-spark.executor.extraJavaOptions -server -XX:-ClassUnloading -XX:+UseParallelGC -XX:ParallelGCThreads=8 -XX:+EnableTeraHeap -XX:TeraHeapSize=1271310319616 -Xms16g -XX:-UseCompressedOops -XX:-UseCompressedClassPointers -XX:+TeraHeapStatistics -Xlogth:teraHeap.txt -XX:TeraHeapPolicy="SparkPrimitivePolicy" -XX:TeraStripeSize=32768 -XX:+ShowMessageBoxOnError -XX:AllocateH2At="/mnt/ssd0/adnan/" -XX:H2FileSize=214748364800 
+spark.executor.extraJavaOptions -server -XX:-ClassUnloading -XX:+UseParallelGC -XX:ParallelGCThreads=8 -XX:+EnableTeraHeap -XX:TeraHeapSize=1219770712064 -Xms64g -XX:-UseCompressedOops -XX:-UseCompressedClassPointers -XX:+TeraHeapStatistics -Xlogth:teraHeap.txt -XX:TeraHeapPolicy="SparkPrimitivePolicy" -XX:TeraStripeSize=32768 -XX:+ShowMessageBoxOnError -XX:AllocateH2At="/mnt/zrammnt0-lzo/" -XX:H2FileSize=214748364800 
 
 spark.teraheap.enabled   true
 spark.teraheap.heap.size 1200g
@@ -38,3 +38,5 @@ spark.driver.extraJavaOptions    -server -XX:+UseParallelGC -XX:-EnableTeraHeap 
 spark.network.timeout             10000s
 spark.executor.heartbeatInterval  999s
 spark.rpc.numRetries              8000
+
+spark.task.maxFailures 2
